<resources>
    <string name="app_name">蚂蚁团队</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="action_settings">设置</string>
    <string name="setting">设置</string>
    <string name="setting_message">我的消息</string>
    <string name="setting_complete">完成事项</string>
    <string name="setting_memo">备忘录</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_setting">设置</string>

    <string name="title">标题</string>

    <string name="title_activity_register">注册</string>
    <string name="terms_statement">通过创建账户，你同意我们的<b>使用条款</b>以及<b>隐私政策</b></string>
    <string name="title_activity_add_task">add task</string>
    <string name="edit">编辑</string>
    <string name="edit_task">编辑任务</string>
    <string name="OK">确定</string>
    <string name="check_update">检查更新</string>
    <string name="copyright_notice">Design by Hadesky\nCopyright @2015 Hadesky\nAll Rights Reserved</string>
    <string name="project_detail">项目详情</string>
    <string name="my_team">我的团队</string>
    <string name="forgetpsw">忘记密码</string>
    <string name="enter_psw_again">再次输入新密码</string>
    <string name="new_psw">新密码</string>
    <string name="get_code">获取验证码</string>

    <string name="all_task">所有任务</string>
    <string name="done_task">已完成</string>
    <string name="undone_task">未完成</string>
    <string name="avatar">头像</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="createTeam">新建团队</string>
    <string name="submit">提交</string>
    <string name="nick_name">昵称</string>
    <string name="user_name">用户名</string>
    <string name="sex">性别</string>
    <string name="personal_summary">个性签名</string>
    <string name="short_phone_number">短号</string>
    <string name="phone_number">手机号</string>
    <string name="email">邮箱</string>
    <string name="address">地址</string>
    <string name="hide">HIDE</string>
    <string name="show">SHOW</string>
    <string name="default_user_name">蚂蚁</string>
    <string name="edit_nick_name">修改昵称</string>
    <string name="forget_password">忘记密码？</string>
    <string name="changeSummary">修改简介</string>
    <string name="no_project">当前没有项目</string>
    <string name="team_member">团队成员</string>
    <string name="team_summary">团队介绍</string>
    <string name="team_notice">团队公告</string>
    <string name="project_name">项目名称</string>
    <string name="sum_of_projects">共%d个项目</string>
    <string name="admin">管理员</string>
    <string name="please_select_Date">请选择时间和时期</string>
    <string name="delete_task">删除任务</string>
    <string name="change_password">修改密码</string>
    <string name="person">人</string>
    <string name="new_project">新建项目</string>
    <string name="new_team">新建团队</string>
    <string name="new_team_summary">快来新建属于你自己团队吧！</string>
    <string name="team_search">团队搜索</string>
    <string name="new_task">新建任务</string>
    <string name="build_up">新建</string>
    <string name="search">查找</string>
    <string name="search_team_or_person">搜索团队或人</string>

    <string name="load_next_five_item">加载下5项</string>
    <string name="back">后退</string>
    <string name="team">团队</string>
    <string name="apply_to_join">申请加入</string>
    <string name="invite">邀请</string>
    <string name="nickname_phone_email">昵称/手机号/邮箱</string>
    <string name="already_a_member_in_team">已经是团队成员</string>
    <string name="change_avatar">修改头像</string>
    <string name="exit_team">退出团队</string>
    <string name="destroy_team">解散团队</string>
    <string name="get_codes">获取验证码</string>
    <string name="password">密码</string>
    <string name="password_again">再次输入密码</string>
    <string name="invite_dialog_title">附加信息（最多30字，可为空）</string>
    <string name="input_message">输入消息…</string>
    <string name="you_are_not_admin">你当前不是管理员</string>
    <string name="short_phone">短号</string>
    <string name="delete_chat">删除对话</string>
    <string name="attach_file">附件</string>
    <string name="place">地点</string>
    <string name="save">保存</string>
    <string name="session_expire">你的登录信息已经过期，请重新登录</string>
    <string name="notice">公告</string>
    <string name="can_not_modify_project">不可修改任务项目</string>
    <string name="member_count">%d人</string>
    <string name="confirm_to_del_task">你确定要删除任务吗？</string>
    <string name="you_are_admin_can_not_exit">你当前是团队管理员，不能退出团队</string>
    <string name="succeed_exit_team">退出成功</string>
    <string name="time_error">开始时间晚于结束时间</string>
    <string name="please_select_project">请先选择项目</string>
    <string name="can_not_edit_task">你不能编辑其他人的创建任务</string>
    <string name="can_not_edit_finished_task">任务已完成，无法编辑</string>
    <string name="user">用户</string>
    <string name="file">归档</string>
</resources>
