<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity"
    >
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_dark"
        />

    <item
        android:id="@+id/action_add"
        android:title="@string/build_up"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_add"
        >
        <menu>
            <item
                android:id="@+id/action_new_task"
                android:title="@string/new_task"
                />
            <item
                android:id="@+id/action_new_team"
                android:title="@string/new_team"
                />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="50"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>
