<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cacw="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        cacw:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    <com.hadesky.cacw.widget.RevScrollView
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_members"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </android.support.v7.widget.RecyclerView>
            <LinearLayout
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.hadesky.cacw.widget.StickView
                    android:duplicateParentState="true"
                    cacw:stick_title="@string/all_task"
                    android:id="@+id/stick_all"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"/>
                <!--分割线-->
                <ImageView
                    android:background="@android:color/white"
                    android:src="#ccc"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="1px"
                    android:layout_height="match_parent" />

                <com.hadesky.cacw.widget.StickView
                    cacw:stick_title="@string/done_task"
                    android:id="@+id/stick_done"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"/>

                <!--分割线-->
                <ImageView
                    android:background="@android:color/white"
                    android:src="#ccc"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="1px"
                    android:layout_height="match_parent" />

                <com.hadesky.cacw.widget.StickView
                    cacw:stick_title="@string/undone_task"
                    android:id="@+id/stick_undone"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_task"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </com.hadesky.cacw.widget.RevScrollView>

</LinearLayout>
